# cmd/server/docs/swagger.yaml
@@ -21,11 +21,15 @@ definitions:
         description: 接待人员的userid。第三方应用获取到的为密文userid，即open_userid
         type: string
     type: object
-  dto.MaxkbConf:
+  dto.LLMAppConfig:
     properties:
       api_key:
         type: string
       base_url:
+        type: string
+      config_name:
+        type: string
+      llmapp_type:
         type: string
     type: object
   dto.Policy:
@@ -245,7 +249,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -265,7 +269,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -285,7 +289,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       - description: kf Information
         in: body
         name: req
@@ -302,32 +306,32 @@ paths:
       summary: Update kf
       tags:
       - kf
-  /maxkb/config:
+  /llmapp/config:
     get:
       consumes:
       - application/json
-      description: Retrieve the current maxkb configuration
+      description: Retrieve a list of all llmapp configuration
       produces:
       - application/json
       responses:
         "200":
-          description: Current maxkb configuration
+          description: OK
           schema:
-            $ref: '#/definitions/dto.MaxkbConf'
-      summary: Get maxkb configuration
+            $ref: '#/definitions/dto.LLMAppConfig'
+      summary: List llmapp configuration
       tags:
-      - maxkb_config
-    patch:
+      - llmapp_config
+    post:
       consumes:
       - application/json
-      description: Update the maxkb configuration with the provided data
+      description: Add a new llmapp configuration
       parameters:
-      - description: maxkb configuration data
+      - description: llmapp configuration data
         in: body
         name: data
         required: true
         schema:
-          $ref: '#/definitions/dto.MaxkbConf'
+          $ref: '#/definitions/dto.LLMAppConfig'
       produces:
       - application/json
       responses:
@@ -335,9 +339,52 @@ paths:
           description: Success response
           schema:
             $ref: '#/definitions/dto.Response'
-      summary: Update maxkb configuration
+      summary: Add new llmapp configuration
       tags:
-      - maxkb_config
+      - llmapp
+  /llmapp/config/{uuid}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve llmapp configuration by its UUID
+      parameters:
+      - description: UUID of the llmapp configuration
+        in: path
+        name: uuid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Get llmapp configuration by UUID
+      tags:
+      - llmapp
+    patch:
+      consumes:
+      - application/json
+      description: Update the llmapp configuration with the provided data
+      parameters:
+      - description: UUID of the llmapp configuration
+        in: path
+        name: uuid
+        required: true
+        type: string
+      - description: llmapp configuration data
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LLMAppConfig'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success response
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: Update llmapp configuration
+      tags:
+      - llmapp_config
   /policy:
     get:
       consumes:
@@ -384,7 +431,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -404,7 +451,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -424,7 +471,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       - description: policy Information
         in: body
         name: req
@@ -487,7 +534,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -507,7 +554,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       produces:
       - application/json
       responses:
@@ -527,7 +574,7 @@ paths:
         in: path
         name: uuid
         required: true
-        type: integer
+        type: string
       - description: Staff Information
         in: body
         name: req
